--- a/popup.css
+++ b/popup.css
@@ -49,10 +49,12 @@ label{
 
 .visible{
   visibility: visible;
+  display:block;
 }
 
 .invisible{
   visibility: hidden;
+  display:none;
 }
 
 #cancel{
